--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f559984da50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcb82ae8590&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f559952c290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f559952c490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcb82ab2390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcb82ab2590&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5599acdb90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5599acdd90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcb83059cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcb83059ed0&gt;]</pre>
 </div>
 
 </div>
