--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f34c9899d90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff31ad31450&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f34c9559490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f34c9559690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff31b2e8410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff31b2e8610&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f34c9afdd10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f34c9afdf10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff31b8e3ed0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff31b88bf90&gt;]</pre>
 </div>
 
 </div>
