--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa1969fc8d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5a7baaaa50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa196fc1250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa196fc1490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5a7b79a250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5a7b79a450&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa19756ab10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa19756ad50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5a7bd4bad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5a7bd4bcd0&gt;]</pre>
 </div>
 
 </div>
