--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1788abe050&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa438414290&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f178906a490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f178906a690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa43872a350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa43872a550&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f178962ae10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f178962afd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa438cd2c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa438cd2e50&gt;]</pre>
 </div>
 
 </div>
