--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa85c386b90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1faebe3150&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa85b549410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa85b549610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1fadd8c150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1fadd8c350&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa85baf1cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa85baf1ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1fae33ca10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1fae33cc10&gt;]</pre>
 </div>
 
 </div>
