--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1faebe3150&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f88722a2790&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1fadd8c150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1fadd8c350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8871c10690&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8871c2d4d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1fae33ca10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1fae33cc10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f887224bc90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f88721d3d50&gt;]</pre>
 </div>
 
 </div>
