--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2025ccffd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa77c249190&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1ff754e510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1ff754e750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa77c2233d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa77c223610&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1ff7af0e50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1ff7afb0d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa77c7cac90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa77c7caed0&gt;]</pre>
 </div>
 
 </div>
