--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa77c249190&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe583b2f810&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa77c2233d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa77c223610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe583e05490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe583e05690&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa77c7cac90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa77c7caed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe5843a9d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe5843a9f90&gt;]</pre>
 </div>
 
 </div>
