--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe583b2f810&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f842a3b25d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe583e05490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe583e05690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f842a7da290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f842a7da490&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe5843a9d90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe5843a9f90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f842ad81ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f842ad81cd0&gt;]</pre>
 </div>
 
 </div>
