--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8dd3c93050&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8c6080b490&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8dd426ea10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8dd425b510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8c5fa0f450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8c5fa0f690&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8dd486e290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8dd47fdd90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8c6000d110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8c5ffb5f50&gt;]</pre>
 </div>
 
 </div>
