--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbf00041610&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f94feac3fd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbf0047a190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbf0047a390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f94fe446310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f94fe446190&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbf00a2aa90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbf00a2ac90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f94fea06b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f94fea06a10&gt;]</pre>
 </div>
 
 </div>
