--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb92a182dd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7638312110&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb929dde550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb929dde750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f76388da450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f76388da650&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb92a381dd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb92a381fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7638e82d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7638e82f90&gt;]</pre>
 </div>
 
 </div>
