--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7edfc64a50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1475a69e90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7ee0230410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7ee0230610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1475726210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1475726410&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7ee07d7cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7ee07d7ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1475ccaad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1475ccacd0&gt;]</pre>
 </div>
 
 </div>
