--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1475a69e90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f06b1a99610&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1475726210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1475726410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f06b1e9f5d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f06b1e9f7d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1475ccaad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1475ccacd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f06b2446dd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f06b2446fd0&gt;]</pre>
 </div>
 
 </div>
