--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5bc7f16410&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff16baef710&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5bc8335350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5bc8335550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff16beeb2d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff16beeb4d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5bc88dbd10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5bc88dbf10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff16c49ac10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff16c49ae10&gt;]</pre>
 </div>
 
 </div>
