--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9baf91afd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7feeac665290&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9bafd25350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9bafd25550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7feeaca7f2d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7feeaca7f4d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9bb02c6c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9bb02c6e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7feead025b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7feead025d90&gt;]</pre>
 </div>
 
 </div>
