--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7feeac665290&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff2aa0c9b50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7feeaca7f2d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7feeaca7f4d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff2aa68f290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff2aa68f490&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7feead025b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7feead025d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff2aac33b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff2aac33d10&gt;]</pre>
 </div>
 
 </div>
