--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9b54c173d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9c178601d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9b54587590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9b54587790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9c171c2410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9c171c2610&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9b54b2edd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9b54b2efd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9c17782c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9c17782e90&gt;]</pre>
 </div>
 
 </div>
