--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdc2583a090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fea84248690&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdc251d5450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdc251d5650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fea84664290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fea84664490&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdc2577dd90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdc2577df90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fea84c0ab90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fea84c0ad90&gt;]</pre>
 </div>
 
 </div>
